--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="player-img">
-            <a href="https://x.com/NEW_web3" target="_blank">
+            <a href="https://x.com/NEW_web3" target="_blank" id="cover-link">
                 <img src="" class="active" id="cover">
             </a>
         </div>
